--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
     // ❗ Notes
     // 🧠 Try using destructuring to grab a reference to the first element of the array
     // 🧠 Try using the at method of arrays to grab the last element
-    const swapper = () => {
+    const swapper = (anArr) => {
+      if (anArr.length < 2) return "No swap performed";
 
+      let [ first, ...rest ] = anArr;
+      let last = rest.at(-1);
+
+      anArr[0] = last;
+      anArr[anArr.length - 1] = first
+
+      return anArr;
     }
 
     // 👉 CHALLENGE 2
@@ -46,8 +54,8 @@
     // 🧠 Try using the ternary operator instead of a conditional statement when deciding what to return.
     // 🧠 So instead of doing `if ('foo') return 'bar' else return 'baz'` do `return 'foo' ? 'bar' : 'baz'`
     // 🧠 The above recommendations allow to write the whole function body in just two clean lines!
-    const headAndTail = () => {
-
+    const headAndTail = (anArray) => {
+      return !anArray.length ? "This array is empty" : [anArray[0], anArray.slice(1)];
     }
 
     // 👉 CHALLENGE 3
@@ -59,8 +67,8 @@
     // devGreet(false, false) // should return "Hey, I am a backend dev and I am sad"
     // ❗ Notes
     // 🧠 Use ternary expressions to construct the string.
-    const devGreet = () => {
-
+    const devGreet = (isFrontend, isHappy) => {
+      return `Hey, I am a ${isFrontend ? "frontend" : "backend"} dev and I am ${isHappy ? "happy" : "sad"}`
     }
 
     // 👉 CHALLENGE 4
@@ -72,8 +80,9 @@
     // recognize({}) // should return "Hidden Person Rocks!"
     // ❗ Notes
     // 🧠 Try using destructuring to grab the name, and a return followed by a ternary expression.
-    const recognize = () => {
-
+    const recognize = (user) => {
+      let { name } = user
+      return name ? `${name} Rules!` : "Hidden Person Rocks!"
     }
 
     // 👉 CHALLENGE 5
@@ -83,8 +92,8 @@
     // processBooleans([1, 0, 0, 1, 0]) // should return ["Y", "N", "N", "Y", "N"]
     // ❗ Notes
     // 🧠 Using map, arrow function syntax, and the ternary, you can make this function a short one-liner
-    const processBooleans = () => {
-
+    const processBooleans = (anArrOfBools) => {
+      return anArrOfBools.map(number => number ? "Y" : "N")
     }
 
     // 👉 CHALLENGE 6
@@ -97,8 +106,15 @@
     // 🧠 Split the string but do not use the reverse method of arrays. Let's do it manually.
     // 🧠 We suggest using a for loop. Research how to loop backwards over an array, starting at the last element.
     // 🧠 Use a ternary in the return statement.
-    const reverseString = () => {
+    const reverseString = (aString) => {
+      let stringArray = aString.split('')
+      let reversedString = '';
 
+      for (let i = (aString.length - 1); i >= 0; i--) {
+        reversedString += stringArray[i]
+      }
+
+      return (aString === reversedString) ? "It's a palindrome!" : reversedString;
     }
 
     // 👉 CHALLENGE 7
@@ -113,8 +129,12 @@
     // ❗ Notes
     // 🧠 Even though object properties have no particular order, to avoid confusing
     // the test runner, please set in each object first name, then age, and finally jsLover.
-    const zip = () => {
-
+    const zip = (arrOne, arrTwo, arrThree) => {
+      return arrOne.map((item, i) => ({
+        name: item,
+        born: arrTwo[i],
+        jsLover: arrThree[i]
+      }));
     }
 
     // 🧪 TESTS, do not work below this line
